--- a/modules/programs/alacritty/alacritty.yml
+++ b/modules/programs/alacritty/alacritty.yml
@@ -227,6 +227,50 @@ schemes:
       cyan:    '#59dffc'
       white:   '#e6e6d1'
 
+  ### Rose-Pine ###
+  # from https://github.com/rose-pine/alacritty #
+  RosePine: &RosePine
+    primary:
+      background: "0x191724"
+      foreground: "0xe0def4"
+    cursor:
+      text: "0xe0def4"
+      cursor: "0x524f67"
+    vi_mode_cursor:
+      text: "0xe0def4"
+      cursor: "0x524f67"
+    line_indicator:
+      foreground: None
+      background: None
+    selection:
+      text: "0xe0def4"
+      background: "0x403d52"
+    normal:
+      black: "0x26233a"
+      red: "0xeb6f92"
+      green: "0x31748f"
+      yellow: "0xf6c177"
+      blue: "0x9ccfd8"
+      magenta: "0xc4a7e7"
+      cyan: "0xebbcba"
+      white: "0xe0def4"
+    bright:
+      black: "0x6e6a86"
+      red: "0xeb6f92"
+      green: "0x31748f"
+      yellow: "0xf6c177"
+      blue: "0x9ccfd8"
+      magenta: "0xc4a7e7"
+      cyan: "0xebbcba"
+      white: "0xe0def4"
+    hints:
+      start:
+        foreground: "#908caa"
+        background: "#1f1d2e"
+      end:
+        foreground: "#6e6a86"
+        background: "#1f1d2e"
+
   ### Gruvbox dark ###
   GruvboxDark: &GruvboxDark
     # Default colors
@@ -488,6 +532,7 @@ schemes:
 # Available themes are:
 # *DoomOne
 # *Dracula
+# *RosePine
 # *GruvboxDark
 # *MonokaiPro
 # *Nord
@@ -497,7 +542,7 @@ schemes:
 # *SolarizedDark
 # *TomorrowNight
 
-colors: *MonokaiPro
+colors: *RosePine
 
 
 
@@ -767,7 +812,7 @@ colors: *MonokaiPro
 # a no-op if you do not wish to receive input characters for that binding.
 
 window:
-  opacity: 0.85
+  opacity: 0.96
 
 key_bindings:
     # (Windows, Linux, and BSD only)
